--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,10 @@
 [user]
-	name = Patrick McDonald
-	email = 66495007+eieioxyz@users.noreply.github.com
-
-
-
-# Other possible Git configurations.
-# - Set the default editor (nano, VS Code, etc.)
-# - Customize color output
-# - Create aliases (shortcuts for Git subcommands)
-# - Add endpoint shortcuts for commonly used URLs
+	name = DanGrae
+	email = 77712567+DanGrae@users.noreply.github.com
+[credential]
+	helper = osxkeychain
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
